src/snapshots/ruff__linter__tests__F632_F632.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: IsLiteral
  location:
    row: 1
    column: 5
  end_location:
    row: 1
    column: 13
  fix: ~
- kind: IsLiteral
  location:
    row: 4
    column: 7
  end_location:
    row: 4
    column: 15
  fix: ~
- kind: IsLiteral
  location:
    row: 7
    column: 9
  end_location:
    row: 7
    column: 17
  fix: ~

