src/snapshots/ruff__linter__tests__F632_F632.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| if x is "abc":
|> Use `==` and `!=` to compare constant literals
      pass
  
| if 123 is not y:
|> Use `==` and `!=` to compare constant literals
      pass
  
| if "123" is x < 3:
|> Use `==` and `!=` to compare constant literals
      pass

