src/snapshots/ruff__linter__tests__F633_F633.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: InvalidPrintSyntax
  location:
    row: 4
    column: 0
  end_location:
    row: 4
    column: 5
  fix: ~

