src/snapshots/ruff__linter__tests__F633_F633.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  from __future__ import print_function
  import sys
  
| print >> sys.stderr, "Hello"
|> Use of `>>` is invalid with `print` function

