src/snapshots/ruff__linter__tests__F634_F634.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: IfTuple
  location:
    row: 1
    column: 0
  end_location:
    row: 2
    column: 4
  fix: ~
- kind: IfTuple
  location:
    row: 7
    column: 4
  end_location:
    row: 9
    column: 4
  fix: ~

