src/snapshots/ruff__linter__tests__F634_F634.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
| if (1, 2):
|     pass
|> If test is a tuple, which is always `True`
  
  for _ in range(5):
      if True:
          pass
|     elif (3, 4):
|         pass
|     elif ():
|> If test is a tuple, which is always `True`
          pass

