src/snapshots/ruff__linter__tests__F701_F701.py.snap
---
source: src/linter.rs
expression: checks
---
- kind: BreakOutsideLoop
  location:
    row: 4
    column: 4
  end_location:
    row: 4
    column: 9
  fix: ~
- kind: BreakOutsideLoop
  location:
    row: 16
    column: 4
  end_location:
    row: 16
    column: 9
  fix: ~
- kind: BreakOutsideLoop
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 9
  fix: ~
- kind: BreakOutsideLoop
  location:
    row: 23
    column: 0
  end_location:
    row: 23
    column: 5
  fix: ~

