src/snapshots/ruff__linter__tests__F704_F704.py.snap
---
source: src/linter.rs
expression: checks
---
- kind:
    YieldOutsideFunction: Yield
  location:
    row: 6
    column: 4
  end_location:
    row: 6
    column: 11
  fix: ~
- kind:
    YieldOutsideFunction: Yield
  location:
    row: 9
    column: 0
  end_location:
    row: 9
    column: 7
  fix: ~
- kind:
    YieldOutsideFunction: YieldFrom
  location:
    row: 10
    column: 0
  end_location:
    row: 10
    column: 12
  fix: ~
- kind:
    YieldOutsideFunction: Await
  location:
    row: 11
    column: 0
  end_location:
    row: 11
    column: 9
  fix: ~

