src/snapshots/ruff__linter__tests__F704_F704.py_remarks.snap
---
source: src/linter.rs
expression: output.finish().to_string()
---
  def f() -> int:
      yield 1
  
  
  class Foo:
|     yield 2
|> `yield` or `yield from` statement outside of a function
  
  
| yield 3
|> `yield` or `yield from` statement outside of a function
| yield from 3
|> `yield` or `yield from` statement outside of a function

